Fix Some Error and upload Resume

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="Error.html" target="blank"
+                    <a href="Assets/Resumes/Resume.pdf" target="blank"
                         class="btn btn-danger px-3 mt-5 d-block w-50 mx-auto"><b>Download
                             CV</b></a>
                 </div>
@@ -391,7 +391,7 @@
 
                             <div class="col-12 col-lg-6">
                                 <div class="contect-detail-lable">
-                                    Contect Me
+                                    Contact Me
                                 </div>
                             </div>
                             <div class="col-12 col-lg-6">
