Add email functionality and  corrected all link of projects

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                         Technological University. I want
                         to be a Full-stack Developer. I know the intermediate level of Web-design and also the basics of
                         backed Development. I
-                        know Three programming languages Python, C/C++, and Java. Currently, I am learning PHP for
+                        know Three programming languages Python, C/C++, and Java. Currently, I am learning PHP and
+                        python framework Django for
                         Backend Development. I am
                         also looking for a part-time or freelancing JOB. If you have a job, you can contact me in the
                         given detail below. And I
@@ -228,7 +229,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="https://shivchevli.github.io/SideProjects/ColorPaletteGenretor/">
                             <div style="--i:2;" class="window">
                                 <img src="Assets/img/Project/Color_plate_genretor.jpeg" alt="">
                                 <div class="product-description-box">
@@ -237,13 +238,15 @@
                                         Thi is just leaning Phase application which I have created to apply my
                                         Javascript knowledge during my leaning phase.
                                     </p>
-                                    <a class="github-link" href="#" target="blank">
+                                    <a class="github-link"
+                                        href="https://github.com/ShivChevli/SideProjects/tree/main/ColorPaletteGenretor"
+                                        target="blank">
                                         <i class="fab fa-github" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="https://github.com/ShivChevli/SideProjects/tree/main/TodoApp">
                             <div style="--i:3;" class="window">
                                 <img src="Assets/img/Project/Task_lister_react.jpeg" alt="">
                                 <div class="product-description-box">
@@ -401,9 +404,9 @@
                             </div>
                             <div class="col-12 col-lg-6">
 
-                                <div class="input-group d-none">
-                                    <input type="text" id="emaiSubject" disabled class="form-control" name="subject"
-                                        placeholder="Subject" value="About Query" required />
+                                <div class="input-group">
+                                    <input type="text" id="emaiSubject" class="form-control" name="subject"
+                                        placeholder="Enter Subject" value="About Inquiry" required />
                                 </div>
 
                                 <div class="input-group my-3">
@@ -411,12 +414,11 @@
                                         placeholder="Enter Name" required>
                                 </div>
                                 <div class="input-group my-3">
-                                    <!-- Change type to Text to fix Error -->
-                                    <input type="email" name="extra_EmailAddress" id="name" class="form-control"
+                                    <input type="text" name="extra_EmailAddress" id="email" class="form-control"
                                         placeholder="Enter E-mail Adress" required>
                                 </div>
                                 <div class="form-group mb-3">
-                                    <textarea class="form-control" name="text" id="" rows="3"
+                                    <textarea class="form-control" required name="text" id="message" rows="3"
                                         placeholder="Enter Comments Here"></textarea>
                                 </div>
                                 <input type="hidden" name="access_token" value="xhef0c24pxg6yjvq16x6vs7h" />
@@ -425,7 +427,6 @@
                                 <input type="hidden" name="success_url"
                                     value="https://shivchevli.github.io/ShivChevli/" />
 
-                                <!-- <input type="submit" class="btn btn-danger px-4" value="Send"> -->
                                 <input id="submit_form" class="btn btn-danger px-4" type="submit" value="Send" />
                             </div>
                         </div>
