Fix mobile view layout

--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
                                     <img src="Assets/img/Project/future_technology_thumbnail.png" alt="">
                                 </div>
                                 <div class="product-description-box">
-                                    <h3>Futer Technological</h3>
+                                    <h3>Future Technology</h3>
                                     <p>
                                         This is static Website which i created for college compitation.
                                     </p>
-                                    <a class="github-link" href="#" aria-disabled="true" target="blank">
+                                    <a class="github-link d-none" aria-disabled="true" target="blank">
                                         <i class="fab fa-github" aria-hidden="true"></i>
                                     </a>
                                 </div>
@@ -262,7 +262,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#">
+                        <a style="cursor: pointer;">
                             <div style="--i:4;" class="window">
                                 <img src="Assets/img/Project/WebPage_thumbnail.jpeg" alt="">
                                 <div class="product-description-box">
@@ -272,7 +272,7 @@
                                         It is built with pure HTML5 and CSS3
                                         technology.
                                     </p>
-                                    <a class="github-link" href="#" target="blank">
+                                    <a class="github-link d-none" target="blank">
                                         <i class="fab fa-github" aria-hidden="true"></i>
                                     </a>
                                 </div>
@@ -397,7 +397,7 @@
                     <form action="https://postmail.invotes.com/send" method="post" id="ContectFrom">
                         <div class="row">
 
-                            <div class="col-12 col-lg-6">
+                            <div class="col-12 col-lg-6 mb-5">
                                 <div class="contect-detail-lable">
                                     Contact Me
                                 </div>
