Add Project Link

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a style="cursor: pointer;">
+                        <a href="https://shivchevli.github.io/SideProjects/First_website/" style="cursor: pointer;">
                             <div style="--i:4;" class="window">
                                 <img src="Assets/img/Project/WebPage_thumbnail.jpeg" alt="">
                                 <div class="product-description-box">
@@ -272,7 +272,8 @@
                                         It is built with pure HTML5 and CSS3
                                         technology.
                                     </p>
-                                    <a class="github-link d-none" target="blank">
+                                    <a href="https://github.com/ShivChevli/SideProjects/tree/main/First_website"
+                                        class="github-link" target="blank">
                                         <i class="fab fa-github" aria-hidden="true"></i>
                                     </a>
                                 </div>
