Make the necessary changes to the descriptions and fixes contact form validations

--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
                     </h2>
                     <!-- <h3 id="Test"></h3> -->
                     <p>
-                        Hello, My name is Shiv Chevli from Surat, India. I am 18 years old. I am a student of Computer
-                        Engineering at Sarvajanik
-                        College of Engineering And Technology, Surat Affiliated by AICT and Connected to Gujrat
-                        Technological University. I want
-                        to be a Full-stack Developer. I know the intermediate level of Web-design and also the basics of
-                        backed Development. I
-                        know Three programming languages Python, C/C++, and Java. Currently, I am learning PHP and
-                        python framework Django for
-                        Backend Development. I am
-                        also looking for a part-time or freelancing JOB. If you have a job, you can contact me in the
-                        given detail below. And I
-                        have attached my resume below.
+                        Hello, I'm Shiv Chevli, and I'm from Surat, India.
+                        I've reached the age of eighteen. Sarvajanik College of Engineering and Technology in Surat,
+                        which is associated with
+                        AICT and Gujrat Technological University, is where I am a Computer Engineering student. My
+                        ambition is to work as a
+                        full-stack developer. As a front end, I'm using React JS, and as a backend, I'm utilising
+                        Python's Djnago framework. I'm
+                        familiar with Python, C/C++, and Java. I'm now learning MERN stack for backend development. I'm
+                        looking for a part-time
+                        or freelance job as well. Please email me at the following address if you have a job opening. A
+                        copy of my resume is
+                        also included.
                     </p>
                     <div class="container-fluid">
                         <div class="row">
@@ -407,13 +407,13 @@
 
                                 <div class="input-group">
                                     <input type="text" id="emaiSubject" class="form-control" name="subject"
-                                        placeholder="Enter Subject" value="About Inquiry" required />
+                                        placeholder="Enter Name " required />
                                 </div>
 
-                                <div class="input-group my-3">
+                                <!-- <div class="input-group my-3">
                                     <input type="text" name="extra_name" id="name" class="form-control"
                                         placeholder="Enter Name" required>
-                                </div>
+                                </div> -->
                                 <div class="input-group my-3">
                                     <input type="text" name="extra_EmailAddress" id="email" class="form-control"
                                         placeholder="Enter E-mail Adress" required>
