--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is my first persnal portfolio and first resume">
-    <title>My PortFolio</title>
+    <title>ShivChevli-PortFolioSite </title>
+
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="description"
+        content="Hello, I'm Shiv Chevli, and I'm from Surat, India. Creative Developer Skilled in designing, developing, and testing multiple web-based applications incorporating a range of technologies. Aspiring to flourish as a Full-Stack Developer by combining a diverse experience with excellent technical abilities. Furthermore, with fundamental knowledge of a variety of technological domains such as DevOps, Data Science, and ML model training.">
+    <meta name="keywords" content="Shiv Chevli, SHIV CHEVLI, ShivChevli, SHIVCHEVLI ,shivchevli, shiv chevli">
 
     <!-- ================================== External CSS ================================ -->
     <link rel="stylesheet" href="Assets/Venders/fontawesome/css/all.min.css">
@@ -93,24 +97,27 @@
                     </h2>
                     <!-- <h3 id="Test"></h3> -->
                     <p>
-                        Hello, I'm Shiv Chevli, and I'm from Surat, India.
-                        I've reached the age of eighteen. Sarvajanik College of Engineering and Technology in Surat,
-                        which is associated with
-                        AICT and Gujrat Technological University, is where I am a Computer Engineering student. My
-                        ambition is to work as a
-                        full-stack developer. As a front end, I'm using React JS, and as a backend, I'm utilising
-                        Python's Djnago framework. I'm
-                        familiar with Python, C/C++, and Java. I'm now learning MERN stack for backend development. I'm
-                        looking for a part-time
-                        or freelance job as well. Please email me at the following address if you have a job opening. A
-                        copy of my resume is
-                        also included.
+                        Hello, my name is Shiv Chevli, and I am from Surat, India. I am a final-year computer
+                        engineering student at Sarvajanik
+                        College of Engineering and Technology in Surat, affiliated with AICT and Gujrat Technological
+                        University. My long-term
+                        goal is to work as a full-stack developer.
+                        I'm using ReactJS/VueJs for the front end and Djnago/Laravel for the backend. I am familiar with
+                        a variety of
+                        technology stacks, including the JAM stack and the LAMP stack, as well as a variety of
+                        technologies such as DevOps,
+                        Blockchain, and Machine Learning. I'm experienced with a variety of programming languages,
+                        including Python, C/C++,
+                        Java, and JavaScript. I'm actively researching the MERN stack. In addition, I am looking for
+                        part-time or freelance job.
+                        If you have a job opening, please contact me at the email address shown below. A resume copy is
+                        also provided.
                     </p>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><span class="lable">Age :- </span> 18</li>
+                                    <li><span class="lable">Age :- </span> 20</li>
                                     <li><span class="lable">Mobile Number :- </span> <br class="d-none d-lg-block">
                                         +91
                                         7383989767
@@ -388,7 +395,7 @@
                     </div>
                     <div class="contect">
                         <label for="">Mobile Number :- </label>
-                        <span>7383989767</span>
+                        <span>+91 &nbsp; 7383989767</span>
                         <br>
                         <label for="">E-mail :- </label>
                         <span>shivchevli9212@gmail.com</span>
