--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </div>
     </section>
     <nav>
-        <span class="ToggleButton"><i class="fa fa-bars" aria-hidden="true"></i></span>
-        <div class=" position">
-            <a href="">
+        <button class="ToggleButton remove-btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
+        <div class="position remove-hidden">
+            <a href="#">
                 <!-- <h1>My PortFo<span style="color: red;">lio</span></h1> -->
                 <h1>My <span class="typed" id="Head" data-typed-items="Profile^2000, Portfolio^1000"></span></h1>
             </a>
@@ -78,7 +78,14 @@
     </nav>
     <header>
         <img src="Assets/img/CoverPhoto.jpg" alt="" class="home-pic">
-        <!-- <img src="Assets/img/Edit_3.png" alt="" class="home-pic"> -->
+        <div class="home-intro">
+            <h1>Hi, I am Shiv Chevli.</h1>
+            <p>
+                I am
+                <span id="home-description" class="typed"
+                    data-typed-items=",Student.,Engineer.,Software Designer.,Software Developer."></spen>
+            </p>
+        </div>
     </header>
     <main>
         <div class="ScollUpArrow-box">
@@ -395,7 +402,7 @@
                     </div>
                     <div class="contect">
                         <label for="">Mobile Number :- </label>
-                        <span>+91 &nbsp; 7383989767</span>
+                        <span>+91 7383989767</span>
                         <br>
                         <label for="">E-mail :- </label>
                         <span>shivchevli9212@gmail.com</span>
